--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,22 @@ body {
 .img-medium {
     height: 200px;
 }
+.links{
+    font-family: ariel;
+    color: #fbfb14;
+    max-width: 800px;
+    margin: 0 auto;
+    padding-top: 25px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
 
+.body1{
+    font-family: Agency FB;
+    color: #322250;
+    max-width: 800px;
+    margin: 0 auto;
+    padding-top: 25px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
