[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -21,7 +21,7 @@ body {
 }
 .links{
     font-family: ariel;
-    color: #fbfb14;
+    color: brown;
     max-width: 800px;
     margin: 0 auto;
     padding-top: 25px;
